# Informatica-Olympiade-2016-2017

./: .gitignore  .gitmodules  CMakeLists.txt  FindSFML.cmake  LICENSE  conanfile.py
src/A1/: a1.py
src/A2/: a2.py
src/A3/: a3.py
src/A4/: a4.py
src/A5/: a5.py
src/B1/: __main__.py  cards.py
src/B2/: __main__.py  pathfinder.py  world.yml
src/B3/: __main__.py  world.py  world.yml
src/C1/: CMakeLists.txt  main.cpp
src/C2/: CMakeLists.txt  main.cpp
src/C3/: CMakeLists.txt  longest_path.json  main.cpp
src/C4/: CMakeLists.txt  main.cpp
src/CCore/: CCore.cpp  CCore.h  CMakeLists.txt  Directions.h  Exporter.cpp  Exporter.h  Path.cpp  Path.h  Point.cpp  Point.h  PrimalityTester.cpp  PrimalityTester.h  Progress.cpp  Progress.h  WorkDivider.cpp  WorkDivider.h
src/CExport/: CMakeLists.txt  main.cpp
src/CMerge/: __main__.py  main.py
src/CPerformance/: CMakeLists.txt  main.cpp
src/CRender/: CMakeLists.txt  CRender.cpp  CRender.h  InputHandler.cpp  InputHandler.h  Renderer.cpp  Renderer.h  main.cpp
src/CRender/Entities/: Entity.h  InformationEntity.cpp  InformationEntity.h  PathEntity.cpp  PathEntity.h  PointsEntity.cpp  PointsEntity.h
test/: main.cpp
test/A1/: test_a1.py
test/A2/: test_a2.py
test/A3/: test_a3.py
test/A4/: test_a4.py
test/A5/: test_a5.py
test/CCore/: PathTest.cpp  PrimalityTesterTest.cpp
